@startuml

title __CELLMANAGER's Class Diagram__\n

  package Twitter {
    package Twitter.twitterstage {
      package Twitter.twitterstage.CellManager {
        class PersonCellLoader {
            + loadCell()
        }
      }
    }
  }
  

  package Twitter {
    package Twitter.twitterstage {
      package Twitter.twitterstage.CellManager {
        class TweetCellLoader {
            + loadCell()
        }
      }
    }
  }
  

  package Twitter {
    package Twitter.twitterstage {
      package Twitter.twitterstage.CellManager {
        class TweetListViewCellController {
            ~ circledUserImage : Circle
            ~ dropDownButton : MenuButton
            ~ hashtagHbox : HBox
            ~ tweetLabel : Label
            ~ nameLabel : Label
            ~ dateLabel : Label
            ~ tweetIDLabel : Label
            ~ anchorPane : AnchorPane
            - graphic : Parent
            # updateItem()
            + deletePost()
        }
      }
    }
  }
  

  package Twitter {
    package Twitter.twitterstage {
      package Twitter.twitterstage.CellManager {
        class UserListViewCellController {
            ~ followButton : Button
            ~ focusButton : Button
            ~ unfollowButton : Button
            ~ nameLabel : Label
            ~ circledUserImage : Circle
            - graphic : Parent
            # updateItem()
            + followPerson()
            + UnfollowPerson()
        }
      }
    }
  }
  

  PersonCellLoader -up-|> CellLoaderStrategy
  TweetCellLoader -up-|> CellLoaderStrategy
  TweetListViewCellController -up-|> ListCell
  TweetListViewCellController o-- TweetListViewCellController : controller
  ShapeProperty -up-|> Runnable
  ShapeProperty -up-|> StyleableObjectProperty
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  MinPrefMaxProperty -up-|> StyleableDoubleProperty
  ValueWrapper -up-|> DoubleBinding
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  InsetsProperty -up-|> ReadOnlyObjectProperty
  LazyBoundsProperty -up-|> ReadOnlyObjectProperty
  LazyTransformProperty -up-|> ReadOnlyObjectProperty
  TreeVisiblePropertyReadOnly -up-|> BooleanExpression
  TreeShowingPropertyReadOnly -up-|> BooleanExpression
  FocusedProperty -up-|> ReadOnlyBooleanPropertyBase
  EffectiveOrientationProperty -up-|> ReadOnlyObjectPropertyBase
  NodeTransformation +-down- LocalToSceneTransformProperty
  LocalToSceneTransformProperty -up-|> LazyTransformProperty
  ReadOnlyObjectWrapperManualFire -up-|> ReadOnlyObjectWrapper
  ReadOnlyPropertyImpl -up-|> ReadOnlyObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  UserListViewCellController -up-|> ListCell
  UserListViewCellController o-- UserListViewCellController : controller
  ShapeProperty -up-|> Runnable
  ShapeProperty -up-|> StyleableObjectProperty
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  MinPrefMaxProperty -up-|> StyleableDoubleProperty
  ValueWrapper -up-|> DoubleBinding
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  InsetsProperty -up-|> ReadOnlyObjectProperty
  LazyBoundsProperty -up-|> ReadOnlyObjectProperty
  LazyTransformProperty -up-|> ReadOnlyObjectProperty
  TreeVisiblePropertyReadOnly -up-|> BooleanExpression
  TreeShowingPropertyReadOnly -up-|> BooleanExpression
  FocusedProperty -up-|> ReadOnlyBooleanPropertyBase
  EffectiveOrientationProperty -up-|> ReadOnlyObjectPropertyBase
  NodeTransformation +-down- LocalToSceneTransformProperty
  LocalToSceneTransformProperty -up-|> LazyTransformProperty
  ReadOnlyObjectWrapperManualFire -up-|> ReadOnlyObjectWrapper
  ReadOnlyPropertyImpl -up-|> ReadOnlyObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
